[gd_scene load_steps=14 format=3 uid="uid://bmijw1xk13sif"]

[ext_resource type="Script" path="res://assets/scripts/encuesta.gd" id="1_lx4vt"]
[ext_resource type="Texture2D" uid="uid://bs5dmxoxv7fx5" path="res://img/encuesta/marco.png" id="2_etaj2"]
[ext_resource type="Texture2D" uid="uid://cmelnle000n00" path="res://img/encuesta/¡Luego de esta experiencia!.png" id="3_yx5tm"]
[ext_resource type="Texture2D" uid="uid://bjmdme3yvoo0t" path="res://img/encuesta/¿qué crees que vale más_.png" id="4_b04oy"]
[ext_resource type="Texture2D" uid="uid://basusnfa2qkh2" path="res://img/encuesta/opcion_01.png" id="5_4vtj4"]
[ext_resource type="Texture2D" uid="uid://dfnyo5uyr1kji" path="res://img/encuesta/opcion_02.png" id="6_wv6vu"]
[ext_resource type="Texture2D" uid="uid://ficah55b6ntr" path="res://img/encuesta/resultados_under.png" id="7_x5nov"]
[ext_resource type="Texture2D" uid="uid://xd60n4al8oln" path="res://img/encuesta/resultados_progress.png" id="8_lu2s0"]
[ext_resource type="Texture2D" uid="uid://dejmpqd5456ev" path="res://img/encuesta/ia.png" id="9_c4vcn"]
[ext_resource type="Texture2D" uid="uid://d0y3ans7cl3os" path="res://img/encuesta/resultados.png" id="10_pjuu1"]
[ext_resource type="Texture2D" uid="uid://bc3bw5o8g1xyc" path="res://img/encuesta/personalizacion.png" id="11_p775q"]
[ext_resource type="Texture2D" uid="uid://b1hn3tky2ibx" path="res://img/encuesta/volver_empezar.png" id="12_6j34s"]
[ext_resource type="Theme" uid="uid://bm1ub45g4i7os" path="res://themes/ai_theme.tres" id="13_hls2r"]

[node name="Encuesta" type="Node2D"]
script = ExtResource("1_lx4vt")

[node name="Marco" type="Sprite2D" parent="."]
position = Vector2(955, 550)
texture = ExtResource("2_etaj2")

[node name="Vale" type="Sprite2D" parent="."]
position = Vector2(970, 284)
texture = ExtResource("4_b04oy")

[node name="PrimeraPantalla" type="Node2D" parent="."]

[node name="Luego" type="Sprite2D" parent="PrimeraPantalla"]
position = Vector2(972, 208)
texture = ExtResource("3_yx5tm")

[node name="Opcion1" type="TextureButton" parent="PrimeraPantalla"]
offset_left = 323.0
offset_top = 518.0
offset_right = 875.0
offset_bottom = 851.0
texture_normal = ExtResource("5_4vtj4")

[node name="TextureButton" type="TextureButton" parent="PrimeraPantalla"]
offset_left = 1077.0
offset_top = 524.0
offset_right = 1629.0
offset_bottom = 857.0
texture_normal = ExtResource("6_wv6vu")

[node name="Resultados" type="Node2D" parent="."]
visible = false

[node name="GraficoResutltados" type="TextureProgressBar" parent="Resultados"]
offset_left = 826.0
offset_top = 498.0
offset_right = 1129.0
offset_bottom = 801.0
allow_greater = true
fill_mode = 5
texture_under = ExtResource("7_x5nov")
texture_progress = ExtResource("8_lu2s0")

[node name="Ia" type="Sprite2D" parent="Resultados"]
position = Vector2(701, 787)
texture = ExtResource("9_c4vcn")

[node name="Resultados2" type="Sprite2D" parent="Resultados"]
position = Vector2(980, 208)
texture = ExtResource("10_pjuu1")

[node name="Personalizacion" type="Sprite2D" parent="Resultados"]
position = Vector2(1307, 523)
texture = ExtResource("11_p775q")

[node name="VolverEmpezar" type="TextureButton" parent="Resultados"]
offset_left = 1379.0
offset_top = 864.0
offset_right = 1753.0
offset_bottom = 946.0
texture_normal = ExtResource("12_6j34s")

[node name="Porcentaje2" type="Label" parent="Resultados"]
modulate = Color(0.831373, 0.572549, 0.0745098, 1)
offset_left = 1130.0
offset_top = 461.0
offset_right = 1207.0
offset_bottom = 504.0
theme = ExtResource("13_hls2r")
text = "0%"

[node name="Porcentaje1" type="Label" parent="Resultados"]
modulate = Color(0.866667, 0.592157, 0.0588235, 1)
offset_left = 774.0
offset_top = 814.0
offset_right = 851.0
offset_bottom = 857.0
theme = ExtResource("13_hls2r")
text = "0%"

[node name="Total" type="Label" parent="Resultados"]
modulate = Color(0.831373, 0.572549, 0.0745098, 1)
offset_left = 76.0
offset_top = 977.0
offset_right = 225.0
offset_bottom = 1000.0

[connection signal="pressed" from="PrimeraPantalla/Opcion1" to="." method="_on_opcion_1_pressed"]
[connection signal="pressed" from="PrimeraPantalla/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Resultados/VolverEmpezar" to="." method="_on_volver_empezar_pressed"]
